# simple_rtree

./: LICENSE  Makefile  README.md  requirements.in  requirements.txt  requirements_dev.in  requirements_dev.txt  setup.cfg
src/simple_rtree/: geometry.py  nodes.py  rtree.py
src/simple_rtree/split/: __init__.py  base.py  linear.py
