[metadata]
name = simple_rtree
author = Anton Zhyltsou
author_email = anton.zhyltsou@gmail.com
version = attr: simple_rtree.__version__
description = Lightweight and pythonic implementation of R-Tree based on Shapely geoms.
long_description = file: README.md
license = MIT License
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir=
    =src
packages=find:
install_requires =
    shapely==1.8.2

[options.packages.find]
where=src
